--- a/Reciplease/View/Base.lproj/LaunchScreen.storyboard
+++ b/Reciplease/View/Base.lproj/LaunchScreen.storyboard
@@ -5,6 +5,7 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -16,36 +17,38 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="fork.knife.circle" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="WOt-om-0ZA">
-                                <rect key="frame" x="25" y="260" width="343" height="332.66666666666674"/>
-                                <color key="tintColor" red="1" green="0.55721506750000005" blue="0.0020686525409999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launchscreen" translatesAutoresizingMaskIntoConstraints="NO" id="wKE-55-Ph0">
+                                <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="RECIPLEASE" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bLH-eC-PJO">
-                                <rect key="frame" x="25" y="613" width="343" height="52"/>
-                                <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="38"/>
-                                <color key="textColor" red="1" green="0.55721506750000005" blue="0.0020686525409999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <textField opaque="NO" userInteractionEnabled="NO" alpha="0.69999999999999996" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="RECIPLEASE" borderStyle="bezel" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Sel-1K-AQP">
+                                <rect key="frame" x="0.0" y="694.33333333333337" width="393" height="73.666666666666629"/>
+                                <color key="backgroundColor" systemColor="systemGreenColor"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="45"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <color key="backgroundColor" red="0.16191794669939952" green="0.16374928498431818" blue="0.18392913510101006" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="WOt-om-0ZA" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="2Gz-9R-IbI"/>
-                            <constraint firstItem="WOt-om-0ZA" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="25" id="32M-pJ-cmN"/>
-                            <constraint firstItem="bLH-eC-PJO" firstAttribute="top" secondItem="WOt-om-0ZA" secondAttribute="bottom" constant="20" id="8Ed-7l-f6U"/>
-                            <constraint firstItem="WOt-om-0ZA" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="200" id="FOW-uD-DSo"/>
-                            <constraint firstItem="bLH-eC-PJO" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="VBg-FX-BNr"/>
-                            <constraint firstItem="bLH-eC-PJO" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="25" id="VLi-v8-wdd"/>
-                            <constraint firstItem="WOt-om-0ZA" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="yz3-IB-5Yy"/>
+                            <constraint firstAttribute="bottom" secondItem="wKE-55-Ph0" secondAttribute="bottom" id="7Qd-FT-Ym7"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Sel-1K-AQP" secondAttribute="bottom" constant="50" id="CrN-L3-j74"/>
+                            <constraint firstItem="Sel-1K-AQP" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="RIU-qD-aED"/>
+                            <constraint firstItem="Sel-1K-AQP" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="Rj4-JL-nxA"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="wKE-55-Ph0" secondAttribute="trailing" id="cmW-3A-LEQ"/>
+                            <constraint firstItem="wKE-55-Ph0" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="qsv-6X-3q6"/>
+                            <constraint firstItem="wKE-55-Ph0" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="s1A-HD-Ihv"/>
                         </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="52.671755725190835" y="374.64788732394368"/>
         </scene>
     </scenes>
     <resources>
-        <image name="fork.knife.circle" catalog="system" width="128" height="123"/>
+        <image name="launchscreen" width="1421" height="3000"/>
+        <systemColor name="systemGreenColor">
+            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
     </resources>
 </document>
